--- a/PersonalDashboardApp/MainWindow.xaml
+++ b/PersonalDashboardApp/MainWindow.xaml
@@ -7,6 +7,15 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBox Grid.Row = "1"></TextBox>
+        <TextBox Grid.Row = "1"></TextBox>
+        <TextBox Grid.Row = "2"></TextBox>
+        <DatePicker Grid.Row="3" ></DatePicker>
     </Grid>
 </Window>
