--- a/PersonalDashboardApp/MainWindow.xaml
+++ b/PersonalDashboardApp/MainWindow.xaml
@@ -4,18 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersonalDashboardApp"
+        xmlns:views="clr-namespace:PersonalDashboardApp.TaskModule.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        ResizeMode="NoResize"
+        WindowStyle="SingleBorderWindow"
+        Title="MainWindow" Height="430" Width="900">
+
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <TextBox Grid.Row = "1"></TextBox>
-        <TextBox Grid.Row = "1"></TextBox>
-        <TextBox Grid.Row = "2"></TextBox>
-        <DatePicker Grid.Row="3" ></DatePicker>
+        <views:TaskView x:Name="TaskViewControl" Margin="10"/>
     </Grid>
 </Window>
