--- a/PersonalDashboardApp/TaskModule/Views/TaskView.xaml
+++ b/PersonalDashboardApp/TaskModule/Views/TaskView.xaml
@@ -6,17 +6,152 @@
              xmlns:local="clr-namespace:PersonalDashboardApp.TaskModule.Views"
              xmlns:enums="clr-namespace:PersonalDashboardApp.TaskModule.Models.Enums"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-   <Grid>
-       <Grid.RowDefinitions>
-           <RowDefinition></RowDefinition>
-           <RowDefinition></RowDefinition>
-           <RowDefinition></RowDefinition>
-           <RowDefinition></RowDefinition>
-       </Grid.RowDefinitions>
-       <TextBox Grid.Row = "1"></TextBox>
-       <TextBox Grid.Row = "1"></TextBox>
-       <TextBox Grid.Row = "2"></TextBox>
-       <DatePicker Grid.Row="3"></DatePicker>
-   </Grid>
+             d:DesignHeight="500" d:DesignWidth="900">
+  <Grid>
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="2*"/>
+        <ColumnDefinition Width="3*"/>
+    </Grid.ColumnDefinitions>
+      
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Label Grid.ColumnSpan="2"
+               Content="Task Editor"
+               FontSize="26"
+               FontWeight="Bold"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Center"
+               Margin="0,0,0,10"/>
+
+        <Label Grid.Row="1" Grid.Column="0"
+               Content="Title:"
+               FontSize="16"
+               VerticalAlignment="Center"
+               Margin="0,0,10,0"/>
+        <TextBox x:Name="TitleTextBox"
+                 Grid.Row="1" Grid.Column="1"
+                 Width="200"
+                 FontSize="14"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Center"/>
+
+        <Label Grid.Row="2" Grid.Column="0"
+               Content="Deadline:"
+               FontSize="16"
+               VerticalAlignment="Center"
+               Margin="0,10,10,0"/>
+        <DatePicker x:Name="DeadlinePicker"
+                    Grid.Row="2" Grid.Column="1"
+                    Width="200"
+                    FontSize="14"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    Margin="0,10,0,0"/>
+
+        <Label Grid.Row="3" Grid.Column="0"
+               Content="Priority:"
+               FontSize="16"
+               VerticalAlignment="Center"
+               Margin="0,10,10,0"/>
+        <ComboBox x:Name="PriorityComboBox"
+                  Grid.Row="3" Grid.Column="1"
+                  Width="200"
+                  FontSize="14"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Center"
+                  Margin="0,10,0,0"/>
+
+        <Button x:Name="AddButton"
+                Grid.Row="4" Grid.Column="0"
+                Content="Add"
+                Width="80"
+                Margin="0,20,10,0"
+                FontSize="16"
+                VerticalAlignment="Bottom"
+                Click="AddButton_Click"/>
+        
+        <Button x:Name="UpdateButton"
+                Grid.Row="5" Grid.Column="0"
+                Content="Update"
+                Width="80"
+                Margin="0,10,10,0"
+                FontSize="16"
+                IsEnabled="False"
+                Click="UpdateButton_Click"/>
+        
+        <Button x:Name="DeleteButton"
+                Grid.Row="6" Grid.Column="0"
+                Content="Delete"
+                Width="80"
+                Margin="0,10,10,0"
+                FontSize="16"
+                IsEnabled="False"
+                Click="DeleteButton_Click"/>
+    </Grid>
+    
+    <Grid Grid.Column="1" Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Label Grid.Row="0"
+               Content="Task List Viewer"
+               FontSize="26"
+               FontWeight="Bold"
+               HorizontalAlignment="Left"
+               Margin="0,0,0,10"/>
+
+        <StackPanel Grid.Row="1"
+                    Orientation="Horizontal"
+                    Margin="0,0,0,10">
+            <TextBox Width="300"
+                     
+                     FontSize="14"
+                     VerticalAlignment="Center"
+                     Margin="0,0,10,0"/>
+            <Button Content="Search"
+                    Width="80"
+                    Height="20"
+                    FontSize="14"/>
+        </StackPanel>
+
+        <DataGrid x:Name="TaskDataGrid"
+                  Grid.Row="2"
+                  SelectionMode="Single"
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False"
+                  IsReadOnly="False"
+                  HorizontalAlignment="Stretch"
+                  VerticalAlignment="Stretch"
+                  ItemsSource="{Binding Tasks}"
+                  SelectionChanged="TaskDataGrid_SelectionChanged">
+                    
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Task Id" Binding="{Binding Id}" Width="*" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Title" Binding="{Binding Title}" Width="120" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Deadline" Binding="{Binding Deadline}" Width="120" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Priority" Binding="{Binding Priority}" Width="80" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Status" Binding="{Binding Status}" Width="80" IsReadOnly="True"/>
+                
+                <DataGridCheckBoxColumn Header="Done" Binding="{Binding IsCompleted, Mode=TwoWay}" IsReadOnly="False"/>
+            </DataGrid.Columns>
+        </DataGrid>
+    </Grid>
+</Grid>
+
 </UserControl>
