--- a/PersonalDashboardApp/TaskModule/Views/TaskView.xaml
+++ b/PersonalDashboardApp/TaskModule/Views/TaskView.xaml
@@ -74,8 +74,7 @@
                   VerticalAlignment="Center"
                   Margin="0,10,0,0"/>
 
-        <Button x:Name="AddButton"
-                Grid.Row="4" Grid.Column="0"
+        <Button Grid.Row="4" Grid.Column="0"
                 Content="Add"
                 Width="80"
                 Margin="0,20,10,0"
