--- a/PersonalDashboardApp/FinanceModule/Views/FinanceView.xaml
+++ b/PersonalDashboardApp/FinanceModule/Views/FinanceView.xaml
@@ -31,9 +31,10 @@
             
             <TextBlock Grid.Row="0" Grid.Column="0" Text="Finance Record Editor" FontSize="26" FontWeight="Bold" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="10,0,0,10"/>
             
-            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Margin="10" VerticalAlignment="Center"  Grid.ColumnSpan="2">
-                <TextBlock Text="Income"  FontSize="16"/>
+            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Margin="10" VerticalAlignment="Center" Grid.ColumnSpan="2">
+                <TextBlock Text="Income" FontSize="16"/>
                 <RadioButton x:Name="IncomeRadioButton" IsChecked="{Binding Type, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Income}" GroupName="TransactionType" Margin="5,5,0,0"/>
+                
                 <TextBlock Text="Expense"  FontSize="16" Margin="60,0,0,0"/>
                 <RadioButton x:Name="ExpenseRadioButton" IsChecked="{Binding Type, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Expense}" GroupName="TransactionType" Margin="5,5,0,0"/>
             </StackPanel>
@@ -50,36 +51,38 @@
             <TextBlock Grid.Row="5" Grid.Column="0" Text="Note:" FontSize="16" Margin="10"/>
             <TextBox Text="{Binding Note}" x:Name="NoteTextBox" Grid.Row="5" Grid.Column="1" Height="25" Width="200" HorizontalAlignment="Left" FontSize="13"/>
 
-            <Button Grid.Row="6" Grid.Column="0" Content="Add" FontSize="16" VerticalAlignment="Bottom" Width="100" Margin="5" Click="ButtonBase_OnClick"/>
+            <Button x:Name="AddButton" Grid.Row="6" Grid.Column="0" Content="Add" FontSize="16" VerticalAlignment="Bottom" Width="100" Margin="5" Click="AddButton_OnClick"/>
+            
             <Button x:Name="UpdateButton" Grid.Row="7" Grid.Column="0" Content="Update" FontSize="16" Width="100" IsEnabled="False" Margin="5" Click="UpdateButton_OnClick"/>
+            
             <Button x:Name="DeleteButton" Grid.Row="8" Grid.Column="0" Content="Delete" FontSize="16" Width="100" IsEnabled="False" Margin="5" Click="DeleteButton_OnClick"/>
         </Grid>
         
         <Grid Grid.Column="1" Margin="10">
+            
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            
             <TextBlock Grid.Row="0" Grid.Column="0" Text="Finance Records Viewer" FontSize="26" FontWeight="Bold" VerticalAlignment="Center" Margin="10,0,0,10"/>
             
             <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,0,0,10">
-                <TextBox Width="300" FontSize="14" VerticalAlignment="Center" Margin="0,0,10,0"/> 
-                <Button Content="Search" Width="80" Height="20" FontSize="14"/>
+                <TextBox x:Name="FilterTextBox" Width="225" FontSize="14" VerticalAlignment="Center" Margin="0,0,10,0" KeyDown="FilterTextBox_OnKeyDown"/> 
+                
+                <Button x:Name="SearchButton" Content="Search" Width="80" Height="20" FontSize="14" Click="SearchButton_OnClick"/>
+                
+                <Button x:Name="BalanceInfoButton" Content="Check Balance" Height="20" FontSize="14" Margin="10,0,0,0" Click="BalanceInfoButton_OnClick"/>
+                
+                <ComboBox x:Name="TransactionTypeFilterComboBox" DisplayMemberPath="Name" SelectedValuePath="Value"
+                          Height="25" FontSize="14" Width="80" Margin="10,0,0,0" SelectionChanged="TransactionTypeFilterComboBox_OnSelectionChanged"/>
             </StackPanel>
 
-            <DataGrid x:Name="DataGridFinanceRecords"
-                      Grid.Row="2"
-                      SelectionMode="Single"
-                      AutoGenerateColumns="False"
-                      CanUserAddRows="False"
-                      IsReadOnly="True"
-                      HorizontalAlignment="Stretch"
-                      VerticalAlignment="Stretch"
-                      SelectedItem="{Binding SelectedFinanceRecord, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                      SelectionChanged="FinanceRecordsDataGrid_SelectionChanged"
-                      ItemsSource="{Binding FinanceRecords, RelativeSource={RelativeSource AncestorType=UserControl}}">
-                    <DataGrid.Columns>
+            <DataGrid x:Name="DataGridFinanceRecords" Grid.Row="2" SelectionMode="Single" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True"
+                      SelectedItem="{Binding SelectedFinanceRecord, RelativeSource={RelativeSource AncestorType=UserControl}}" SelectionChanged="FinanceRecordsDataGrid_SelectionChanged" ItemsSource="{Binding FinanceRecords, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                
+                <DataGrid.Columns>
                     <DataGridTextColumn Header="Id" Binding="{Binding Id}" Width="*"/>
                     <DataGridTextColumn Header="Type" Binding="{Binding TransactionType}" Width="60"/>
                     <DataGridTextColumn Header="Amount" Binding="{Binding Amount}" Width="100"/>
