--- a/PersonalDashboardApp/TaskModule/Views/TaskView.xaml
+++ b/PersonalDashboardApp/TaskModule/Views/TaskView.xaml
@@ -19,7 +19,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="150"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -28,77 +28,22 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Grid.ColumnSpan="2"
-               Content="Task Editor"
-               FontSize="26"
-               FontWeight="Bold"
-               HorizontalAlignment="Left"
-               VerticalAlignment="Center"
-               Margin="0,0,0,10"/>
+        <Label Grid.ColumnSpan="2" Content="Task Editor" FontSize="26" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,0,10"/>
 
-        <Label Grid.Row="1" Grid.Column="0"
-               Content="Title:"
-               FontSize="16"
-               VerticalAlignment="Center"
-               Margin="0,0,10,0"/>
-        <TextBox x:Name="TitleTextBox"
-                 Grid.Row="1" Grid.Column="1"
-                 Width="200"
-                 FontSize="14"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Center"/>
-
-        <Label Grid.Row="2" Grid.Column="0"
-               Content="Deadline:"
-               FontSize="16"
-               VerticalAlignment="Center"
-               Margin="0,10,10,0"/>
-        <DatePicker x:Name="DeadlinePicker"
-                    Grid.Row="2" Grid.Column="1"
-                    Width="200"
-                    FontSize="14"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
-                    Margin="0,10,0,0"/>
-
-        <Label Grid.Row="3" Grid.Column="0"
-               Content="Priority:"
-               FontSize="16"
-               VerticalAlignment="Center"
-               Margin="0,10,10,0"/>
-        <ComboBox x:Name="PriorityComboBox"
-                  Grid.Row="3" Grid.Column="1"
-                  Width="200"
-                  FontSize="14"
-                  HorizontalAlignment="Left"
-                  VerticalAlignment="Center"
-                  Margin="0,10,0,0"/>
-
-        <Button Grid.Row="4" Grid.Column="0"
-                Content="Add"
-                Width="80"
-                Margin="0,20,10,0"
-                FontSize="16"
-                VerticalAlignment="Bottom"
-                Click="AddButton_Click"/>
+        <Label Grid.Row="1" Grid.Column="0" Content="Title:" FontSize="16" VerticalAlignment="Center" Margin="0,0,10,0"/> 
+        <TextBox x:Name="TitleTextBox" Grid.Row="1" Grid.Column="1" Width="200" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center"/> 
         
-        <Button x:Name="UpdateButton"
-                Grid.Row="5" Grid.Column="0"
-                Content="Update"
-                Width="80"
-                Margin="0,10,10,0"
-                FontSize="16"
-                IsEnabled="False"
-                Click="UpdateButton_Click"/>
+        <Label Grid.Row="2" Grid.Column="0" Content="Deadline:" FontSize="16" VerticalAlignment="Center" Margin="0,10,10,0"/> 
+        <DatePicker x:Name="DeadlinePicker" Grid.Row="2" Grid.Column="1" Width="200" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,10,0,0"/>
+
+        <Label Grid.Row="3" Grid.Column="0" Content="Priority:" FontSize="16" VerticalAlignment="Center" Margin="0,10,10,0"/> 
+        <ComboBox x:Name="PriorityComboBox" Grid.Row="3" Grid.Column="1" Width="200" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,10,0,0"/>
+
+        <Button Grid.Row="4" Grid.Column="0" Content="Add" Width="80" Margin="0,20,10,0" FontSize="16" VerticalAlignment="Bottom" Click="AddButton_Click"/>
         
-        <Button x:Name="DeleteButton"
-                Grid.Row="6" Grid.Column="0"
-                Content="Delete"
-                Width="80"
-                Margin="0,10,10,0"
-                FontSize="16"
-                IsEnabled="False"
-                Click="DeleteButton_Click"/>
+        <Button x:Name="UpdateButton" Grid.Row="5" Grid.Column="0" Content="Update" Width="80" Margin="0,10,10,0" FontSize="16" IsEnabled="False" Click="UpdateButton_Click"/>
+        
+        <Button x:Name="DeleteButton" Grid.Row="6" Grid.Column="0" Content="Delete" Width="80" Margin="0,10,10,0" FontSize="16" IsEnabled="False" Click="DeleteButton_Click"/>
     </Grid>
     
     <Grid Grid.Column="1" Margin="10">
@@ -108,31 +53,17 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0"
-               Content="Task List Viewer"
-               FontSize="26"
-               FontWeight="Bold"
-               HorizontalAlignment="Left"
-               Margin="0,0,0,10"/>
+        <Label Grid.Row="0" Content="Task List Viewer" FontSize="26" FontWeight="Bold" HorizontalAlignment="Left" Margin="0,0,0,10"/>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,0,0,10">
-            
             <TextBox x:Name="FilterTextBox" Width="225" FontSize="14" VerticalAlignment="Center" Margin="0,0,10,0" KeyDown="FilterTextBox_OnKeyDown"/>
             <Button x:Name="SearchButton" Content="Search" Width="80" Height="20" FontSize="14" Click="SearchButton_OnClick"/>
             <TextBlock Text="Task status:" Margin="20,0,0,0" FontSize="14"/>
-            <ComboBox x:Name="StatusFilterComboBox" Width="100" Height="20" Margin="10,0,0,0" SelectionChanged="StatusFilterComboBox_OnSelectionChanged"/>
+            <ComboBox x:Name="StatusFilterComboBox" Width="100" Height="20" Margin="10,0,0,0" DisplayMemberPath="Name" SelectedValuePath="Value" SelectionChanged="StatusFilterComboBox_OnSelectionChanged"/>
         </StackPanel>
 
-        <DataGrid x:Name="TaskDataGrid"
-                  Grid.Row="2"
-                  SelectionMode="Single"
-                  AutoGenerateColumns="False"
-                  CanUserAddRows="False"
-                  IsReadOnly="False"
-                  HorizontalAlignment="Stretch"
-                  VerticalAlignment="Stretch"
-                  ItemsSource="{Binding Tasks}"
-                  SelectionChanged="TaskDataGrid_SelectionChanged">
+        <DataGrid x:Name="TaskDataGrid" Grid.Row="2" SelectionMode="Single" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="False" 
+                  ItemsSource="{Binding Tasks}" SelectionChanged="TaskDataGrid_SelectionChanged">
                     
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Task Id" Binding="{Binding Id}" Width="*" IsReadOnly="True"/>
@@ -140,7 +71,6 @@
                 <DataGridTextColumn Header="Deadline" Binding="{Binding Deadline}" Width="120" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Priority" Binding="{Binding Priority}" Width="80" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Status" Binding="{Binding Status}" Width="80" IsReadOnly="True"/>
-                
                 <DataGridCheckBoxColumn Header="Done" Binding="{Binding IsCompleted, Mode=TwoWay}" IsReadOnly="False"/>
             </DataGrid.Columns>
         </DataGrid>
